--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "new-site-onparsel",
+  "name": "newparsel-boostrap",
   "source": "src/index.html",
   "version": "1.0.0",
   "description": "",
   "homepage": "",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel serve src/index.html --public-url / --dist-dir dist",
+     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build src/*.html --public-url /new-site-onparsel/"
   },
   "keywords": [],
@@ -18,6 +19,8 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.0",
     "sass": "^1.63.4"
   }
 }
