--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "",
   "scripts": {
     "start": "parcel serve src/index.html --public-url / --dist-dir dist",
-     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build src/*.html --public-url /new-site-onparsel/"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "sass": "^1.63.4"
   }
 }
